# requestyai-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
requestyai/: __init__.py
requestyai/ainsights/: __init__.py  client.py  error.py
requestyai/ainsights/types/: event.py
requestyai/http/: async_client.py  atomic.py  retry_jitter_type.py  retry_policy.py  retry_transport.py
samples/openai/: client_global.py  client_instance.py  client_singleton.py  client_tools.py
samples/openai/basic/: app.py
samples/openai/format/: app.py
samples/openai/global/: ainsights.py  app.py
samples/openai/tools/: app.py
tests/ainsights/: test_client.py
tests/http/: test_async_client.py
